--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,610 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: "IBM Plex Sans";
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header {
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 72px;
+  height: 60px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+.search {
+  width: 360px;
+  height: 42px;
+  position: relative;
+}
+
+.search img {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 10px;
+  z-index: 1;
+}
+
+.search input {
+  width: 100%;
+  height: 100%;
+  border-radius: 21px;
+  background: hsla(0, 0%, 95%, 1);
+  position: absolute;
+  padding: 0px 50px;
+  border: none;
+  font-size: 14px;
+}
+
+.create {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.free_span {
+  color: hsla(220, 78%, 54%, 1);
+}
+
+.hero {
+  width: 100%;
+  position: relative;
+  color: white;
+}
+
+.hero img {
+  width: 100%;
+  object-fit: cover;
+  filter: brightness(0.5);
+}
+
+.hero h2 {
+  position: absolute;
+  top: 72%;
+  left: 26%;
+  transform: translate(-50%, -50%);
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 46.8px;
+  z-index: 1;
+}
+
+.hero p {
+  position: absolute;
+  top: 79.5%;
+  left: 24%;
+  transform: translate(-50%, -50%);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 23.4px;
+  z-index: 1;
+}
+
+.articles_header {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 72px;
+  margin: 40px 150px 0px 150px;
+}
+
+.articles_top {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.articles_top #all_post {
+  color: hsla(0, 0%, 0%, 1);
+}
+
+.articles_top h4 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20.8px;
+  color: hsla(0, 0%, 54%, 1);
+  cursor: pointer;
+}
+
+.articles_top h4:hover {
+  color: hsla(0, 0%, 0%, 1);
+}
+
+.articles_top_btn {
+  display: flex;
+  gap: 8px;
+}
+
+.post_btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 18px;
+  cursor: pointer;
+  width: 133px;
+  height: 36px;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 19.5px;
+  border: none;
+}
+
+.post_btn img {
+  width: 22px;
+  height: 22px;
+}
+
+.join_btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: hsla(220, 78%, 54%, 1);
+  gap: 7px;
+  cursor: pointer;
+  color: white;
+  width: 125px;
+  height: 36px;
+  border: none;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 19.5px;
+}
+
+.divider {
+  width: 72%;
+  height: 1px;
+  background-color: hsla(0, 0%, 88%, 1);
+  margin: 15px 220px;
+  border: 1px;
+}
+
+.articles {
+  display: flex;
+}
+
+.article {
+  width: 692px;
+  height: auto;
+  border: 1px solid hsla(0, 0%, 88%, 1);
+  border-radius: 4px;
+  margin: 0px 220px 20px 220px;
+}
+
+.article img {
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
+}
+
+.article h4 {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 23.4px;
+  margin: 20px 20px 10px 20px;
+}
+
+.article h5 {
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 29.52px;
+  width: 500px;
+  margin: 0px 20px 10px 20px;
+}
+
+.article h6 {
+  font-size: 19px;
+  font-weight: 400;
+  line-height: 25.49px;
+  color: hsla(0, 0%, 36%, 1);
+  margin: 0px 20px 10px 20px;
+}
+
+.article_users {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0px 20px 10px 20px;
+}
+
+.user {
+  display: flex;
+  align-items: center;
+  margin-top: 14px;
+  margin-bottom: 15px;
+}
+
+.user img {
+  width: 48px;
+  height: 48px;
+  border-radius: 24px;
+}
+
+.user h3 {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 23.4px;
+  margin-top: 5px;
+  margin-left: 8px;
+  color: black;
+}
+
+.share {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.share p {
+  font-size: 14px;
+  line-height: 18.2px;
+  color: hsla(0, 0%, 32%, 1);
+}
+
+.share_btn {
+  width: 42px;
+  height: 36px;
+  border-radius: 2px;
+  border: none;
+  cursor: pointer;
+}
+
+.share_btn img {
+  width: 18px;
+  height: 18px;
+}
+
+.article_detail {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 50%;
+  margin: 0px 20px 10px 20px;
+}
+
+.calendar {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.calendar img {
+  width: 18px;
+  height: 18px;
+}
+
+.location {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.location img {
+  width: 20px;
+  height: 20px;
+}
+
+.meet_btn {
+  width: 652px;
+  height: 38px;
+  border-radius: 8px;
+  border: 0.7px solid hsla(220, 10%, 69%, 1);
+  background-color: white;
+  color: hsla(15, 77%, 55%, 1);
+  margin: 5px 20px 10px 20px;
+  cursor: pointer;
+}
+
+.meet_btn:hover {
+  background-color: hsla(15, 77%, 55%, 1);
+  color: white;
+}
+
+.article_detail2 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 58%;
+  margin: 0px 20px 10px 20px;
+}
+
+.job_btn {
+  width: 652px;
+  height: 36px;
+  border-radius: 10px;
+  border: 0.7px solid hsla(220, 10%, 69%, 1);
+  background-color: white;
+  color: hsla(220, 10%, 69%, 1);
+  margin: 5px 20px 10px 20px;
+  cursor: pointer;
+}
+
+.job_btn:hover {
+  background-color: hsla(220, 10%, 69%, 1);
+  color: white;
+}
+
+.job {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.job img {
+  width: 20px;
+  height: 20px;
+}
+
+.groups {
+  width: 220px;
+  margin-left: -50px;
+  margin-top: 20px;
+}
+
+.groups_location {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.divider2 {
+  width: 100%;
+  height: 1px;
+  background-color: hsla(0, 0%, 88%, 1);
+  margin-top: 8px;
+  border: 1px;
+}
+
+.groups h6 {
+  font-size: 12px;
+  line-height: 15.6px;
+  font-weight: 400;
+  color: hsla(0, 0%, 0%, 1);
+  opacity: 0.5;
+  margin-top: 20px;
+}
+
+.modal-content {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-body {
+  position: relative;
+  width: 736px;
+  /* height: 513px; */
+}
+
+.modal-body .close {
+  background-color: white;
+  opacity: 0.8;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 25px;
+  height: 25px;
+  border-radius: 15px;
+  position: absolute;
+  top: -35px;
+  right: 0;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 500;
+  color: hsla(150, 100%, 27%, 1);
+  background-color: hsla(140, 100%, 95%, 1);
+  width: 100%;
+  height: 50px;
+}
+
+.modal-content form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  background-color: #fefefe;
+  border-radius: 5px;
+  width: 100%;
+}
+
+.form-header {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 20px;
+}
+
+.form-header h1 {
+  font-size: 24px;
+  line-height: 31.2px;
+  font-weight: 700;
+  color: hsla(0, 0%, 0%, 1);
+}
+
+.form-header h4 {
+  font-size: 14px;
+  line-height: 18.2px;
+  font-weight: 600;
+  color: hsla(0, 0%, 24%, 1);
+}
+.form-header h4 span{
+  font-size: 13px;
+  line-height: 16.9px;
+  font-weight: 600;
+  color: hsla(220, 78%, 54%, 1);
+  cursor: pointer;
+}
+
+.form-section {
+  display: flex;
+  gap: 5px;
+}
+
+.form-group_name {
+  display: flex;
+  width: 320px;
+  height: 46px;
+}
+
+.form-group_name input {
+  width: 160px;
+  height: 100%;
+  color: hsla(220, 4%, 85%, 1);
+  background-color: hsla(220, 23%, 97%, 1);
+  border: 1px solid hsla(220, 4%, 85%, 1);
+  font-size: 15px;
+  line-height: 16px;
+  font-weight: 500;
+  padding: 0px 10px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 20px;
+}
+
+.form-group > input{
+  width: 342px;
+  height: 46px;
+  color: hsla(220, 4%, 85%, 1);
+  background-color: hsla(220, 23%, 97%, 1);
+  border: 1px solid hsla(220, 4%, 85%, 1);
+  font-size: 15px;
+  line-height: 16px;
+  font-weight: 500;
+  padding: 0px 10px;
+}
+.from-group p {
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 500;
+  color: hsla(0, 0%, 0%, 1);
+  cursor: pointer;
+}
+
+.form-btn {
+  width: 360px;
+  height: 40px;
+  border-radius: 20px;
+  background-color: hsla(220, 78%, 54%, 1);
+  color: white;
+  border: none;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.form-btn:hover {
+  background-color: hsla(220, 78%, 64%, 1);
+}
+
+.facebook {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 20px;
+  width: 360px;
+  height: 38px;
+  border: 0.6px solid hsla(240, 3%, 85%, 1);
+  cursor: pointer;
+} 
+
+.google {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  width: 360px;
+  height: 38px;
+  border: 0.6px solid hsla(240, 3%, 85%, 1);
+  cursor: pointer;
+} 
+
+.artwork p{
+  font-size: 11px;
+  line-height: 16px;
+  font-weight: 400;
+  color: hsla(0, 0%, 0%, 1);
+  opacity: 0.6;
+}
+
+.from-group p {
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 500;
+  color: hsla(0, 0%, 0%, 1);
+  text-align: center;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 767px) {
+  .header {
+    display: none;
+  }
+  .hero h2 {
+    top: 50px;
+    left: 20px;
+    transform: translate(0%, 0%);
+  }
+  .hero p {
+    top: 100px;
+    left: 20px;
+    transform: translate(0%, 0%);
+  }
+  .articles_header {
+    display: none;
+  }
+  .divider {
+    display: none;
+  }
+  .article {
+    width: 100%;
+    margin: 0;
+  }
+  .articles {
+    display: block;
+  }
+  .groups {
+    display: none;
+  }
+  .post_btn,
+  .join_btn {
+    display: none;
+  }
+
+  .article h5 {
+    width: 100%;
+  }
+
+  .article_detail,
+  .article_detail2 {
+    width: 80%;
+  }
+
+  .meet_btn,
+  .job_btn {
+    width: 90%;
+  }
 }
